<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/action_settings" >

        <CheckBoxPreference
            android:key="@string/notification_enabled_key"
            android:title="@string/notification_enabled_title"
            android:summary="@string/notification_enabled_summary" />

        <ListPreference
            android:key="@string/icon_type_key"
            android:title="@string/icon_type_title"
            android:summary=""
            android:entries="@array/icon_type"
            android:entryValues="@array/icon_type_value" />

        <Preference
            android:key="@string/version_name_key"
            android:title="@string/version_name_title" />

    </PreferenceCategory>

</PreferenceScreen>